# config-generator

./: .gitignore  CMakeLists.txt  README.md  main.cpp
src/: config_generator.cpp  config_generator.h  generator_parameters.cpp  generator_parameters.h  parsing_utils.h  string_utils.h
